Fixed spacing issue

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -529,6 +529,7 @@
       color: #333;
       font-weight: 600;
       margin-top: 10px;
+      margin-bottom: 0px;
       text-transform:capitalize;
       text-overflow: ellipsis;
       overflow: hidden;
